# poetry-learning

./: README.md  pyproject.toml
poetry_learning/: __init__.py
poetry_learning/data_collector/: __init__.py
poetry_learning/math/: __init__.py
tests/: test_data_collector.py  test_examples.py
