[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Ankit Gupta <ankit@tpfs.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pytoml = "^0.1.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
